--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
+  },
+  "devDependencies": {
+    "redux-persist": "^4.9.1"
   }
 }
