--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
   "expo": {
-    "name": "jobs",
-    "description": "An empty new project",
-    "slug": "jobs",
+    "name": "MoodMeter",
+    "description": "An application for keeping track of your moods",
+    "slug": "MoodMeter",
     "privacy": "public",
     "sdkVersion": "19.0.0",
     "version": "1.0.0",
