--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "lodash": "^4.17.4",
     "qs": "^6.5.0",
     "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-19.0.0.tar.gz",
-    "react-native-elements": "^0.15.0",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz",
+    "react-native-camera": "^0.10.0",
+    "react-native-elements": "^0.17.0",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2",
