--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "axios": "^0.16.2",
+    "chroma-js": "^1.3.4",
     "expo": "^19.0.0",
     "latlng-to-zip": "0.0.1",
     "lodash": "^4.17.4",
