--- a/package.json
+++ b/package.json
@@ -7,21 +7,21 @@
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
     "axios": "^0.16.2",
-    "chroma-js": "^1.3.4",
+    "chroma-js": "^1.3.7",
     "expo": "^19.0.0",
     "latlng-to-zip": "0.0.1",
-    "lodash": "^4.17.4",
-    "qs": "^6.5.0",
+    "lodash": "^4.17.10",
+    "qs": "^6.5.2",
     "react": "16.0.0-alpha.12",
     "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz",
     "react-native-camera": "^0.10.0",
     "react-native-elements": "^0.17.0",
-    "react-navigation": "^1.0.0-beta.11",
-    "react-redux": "^5.0.6",
+    "react-navigation": "^1.5.12",
+    "react-redux": "^5.0.7",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0"
   },
   "devDependencies": {
-    "redux-persist": "^4.9.1"
+    "redux-persist": "^4.10.2"
   }
 }
