--- a/package.json
+++ b/package.json
@@ -2,26 +2,29 @@
   "name": "MoodMeter",
   "version": "0.0.0",
   "description": "Hello Expo!",
-  "author": null,
+  "author": "Rob Abby",
   "private": true,
   "main": "node_modules/expo/AppEntry.js",
   "dependencies": {
+    "@ant-design/react-native": "^3.1.8",
+    "@babel/plugin-transform-react-jsx-source": "^7.2.0",
     "axios": "^0.16.2",
     "chroma-js": "^1.3.7",
-    "expo": "^19.0.0",
+    "expo": "32.0.0",
     "latlng-to-zip": "0.0.1",
     "lodash": "^4.17.10",
     "qs": "^6.5.2",
-    "react": "16.0.0-alpha.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-21.0.2.tar.gz",
+    "react": "16.5.0",
+    "react-native": "0.57.1",
     "react-native-camera": "^0.10.0",
     "react-native-elements": "^0.17.0",
-    "react-navigation": "^1.5.12",
-    "react-redux": "^5.0.7",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0"
+    "react-navigation": "^3.11.0",
+    "react-redux": "^6.0.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "redux-persist": "^4.10.2"
+    "redux-persist": "^4.10.2",
+    "schedule": "0.4.0"
   }
 }
