--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react-native-camera": "^0.10.0",
     "react-native-elements": "^0.17.0",
     "react-navigation": "^3.11.0",
+    "react-navigation-animated-switch": "^0.2.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.11.2",
     "redux-persist": "^4.10.2",
     "schedule": "0.4.0"
   }
