--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
-  "presets": ["module:metro-react-native-babel-preset"],
+  "presets": ["module:metro-react-native-babel-preset", "module:react-native-dotenv"],
   "plugins": [
-    ["import", { "libraryName": "@ant-design/react-native" }] // The difference with the Web platform is that you do not need to set the style
+    ["import", { "libraryName": "@ant-design/react-native" }]
   ]
 }
