--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MoodMeter",
+  "name": "mood-meter",
   "version": "0.0.0",
   "description": "Hello Expo!",
   "author": "Rob Abby",
@@ -8,7 +8,7 @@
   "dependencies": {
     "@ant-design/react-native": "^3.1.8",
     "@babel/plugin-transform-react-jsx-source": "^7.2.0",
-    "axios": "^0.16.2",
+    "axios": "0.19.0-beta.1",
     "chroma-js": "^1.3.7",
     "expo": "32.0.0",
     "latlng-to-zip": "0.0.1",
@@ -17,12 +17,14 @@
     "react": "16.5.0",
     "react-native": "0.57.1",
     "react-native-camera": "^0.10.0",
+    "react-native-dotenv": "^0.2.0",
     "react-native-elements": "^0.17.0",
     "react-navigation": "^3.11.0",
     "react-navigation-animated-switch": "^0.2.0",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "strapi-sdk-javascript": "^0.3.1"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.11.2",
