--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "dependencies": {
     "@ant-design/react-native": "^3.1.8",
     "@babel/plugin-transform-react-jsx-source": "^7.2.0",
-    "axios": "0.19.0-beta.1",
+    "axios": ">=0.19.0",
     "chroma-js": "^1.3.7",
     "expo": "32.0.0",
     "latlng-to-zip": "0.0.1",
