--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": ">=0.19.0",
     "chroma-js": "^1.3.7",
     "expo": "32.0.0",
+    "graphql": "^14.3.1",
+    "graphql-tag": "^2.10.1",
     "latlng-to-zip": "0.0.1",
     "lodash": "^4.17.10",
     "qs": "^6.5.2",
@@ -24,7 +26,8 @@
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "strapi-sdk-javascript": "^0.3.1"
+    "strapi-sdk-javascript": "^0.3.1",
+    "urql": "^1.0.5"
   },
   "devDependencies": {
     "babel-plugin-import": "^1.11.2",
